@@ -1,12 +1,14 @@
 Function: pollegendre
 Section: polynomials
-C-Name: pollegendre_eval
-Prototype: LDG
-Help: pollegendre(n,{a='x}): legendre polynomial of degree n evaluated at a.
+C-Name: pollegendre_eval0
+Prototype: LDGD0,L,
+Help: pollegendre(n,{a='x},{flag=0}): legendre polynomial of degree n evaluated at a.
+ If flag is 1, return [L_{n-1}(a), L_n(a)].
 Description:
   (small,?var):gen    pollegendre($1,$2)
   (small,gen):gen     pollegendre_eval($1,$2)
-Doc: $n^{\text{th}}$ \idx{Legendre polynomial} evaluated at $a$ (\kbd{'x} by
- default).
-Variant: To obtain the $n$-th Legendre polynomial in variable $v$,
- use \fun{GEN}{pollegendre}{long n, long v}.
+Doc: $n^{\text{th}}$ \idx{Legendre polynomial} $L_n$ evaluated at $a$ (\kbd{'x}
+ by default). If flag is 1, return $[L_{n-1}(a), L_n(a)]$.
+Variant: To obtain the $n$-th Legendre polynomial $L_n$ in variable $v$,
+ use \fun{GEN}{pollegendre}{long n, long v}. To obtain $L_n(a)$,
+ use \fun{GEN}{pollegendre_eval}{long n, GEN a}.
